REPO-331: Review security analysis plugin results for branch (#46)
* REPO-331 - Review security analysis plugin results for branch:
 - fixed some critical / major issues detected by sonar
 - fields that are not serialized were changed to transient. The serialization of Person is required in CommentsImpl
 - fixed an issue found using sonar where in case a node was updated with "qshare:shared" aspect a 500 response was returned. Fixed by returning empty list when params are null
 - added null check for searchQuery